--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
+    <meta name="robots" content="index, follow">    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="Descubra os melhores produtos e achados recomendados por queroesseachadobr. Tudo em um só lugar!">
+
+    <title>Meus Achados Favoritos | queroesseachadobr</title>
   </head>
   <body>
     <div id="root"></div>
